--- a/themes/zarya/static/sass/_base.sass
+++ b/themes/zarya/static/sass/_base.sass
@@ -69,6 +69,8 @@ footer
     display: flex
     flex-direction: column
     justify-content: center
+    @media (max-width: 600px)
+        background-position: center
     h1
         margin-bottom: 0
     ul
